Adicionado Caixa de texto para informar o CEP, e criado alerta para inserção de todos os caracteres

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,14 @@
     tools:context=".MainActivity">
 
 
+    <EditText
+        android:id="@+id/editCep"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:maxLength="8"
+        android:hint="CEP" />
+
     <Button
         android:id="@+id/btnBuscarCep"
         android:layout_width="wrap_content"
@@ -22,4 +30,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Resultados" />
+
 </LinearLayout>
